--- a/openlab-project/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/openlab-project/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
-<!--<p>Xp: {{xpAndGuild.Guild}}</p>
-<p>Xp: {{xpAndGuild.Xp}}</p>-->
+<p>Guild: {{xpAndGuild.guild}}</p>
+<p>Xp: {{xpAndGuild.xp}}</p>
