--- a/openlab-project/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/openlab-project/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -34,6 +34,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/dashboard']">Dashboard </a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/guild']">Guild </a>
+          </li>
         </ul>
         <app-login-menu></app-login-menu>
       </div>
