--- a/openlab-project/ClientApp/src/app/guild/guild.component.html
+++ b/openlab-project/ClientApp/src/app/guild/guild.component.html
@@ -2,15 +2,23 @@
 
 <div class="accordion" id="accordionExample">
     <div class="accordion-item" *ngFor="let guild of GuildData; let i = index">
-        <h2 class="accordion-header" [attr.id]="'heading' + i">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse' + i" [attr.aria-controls]="'#collapse' + i">
-                <strong>{{ guild.name }}</strong>&nbsp; [{{ guild.membersCount }}/{{ guild.guildMaxMembers }}]
-            </button>
-        </h2>
-        <div [attr.id]="'collapse' + i" class="accordion-collapse collapse" [attr.aria-labelledby]="'#heading' + i" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                {{ guild.description }}
-            </div>
+      <h2 class="accordion-header" [attr.id]="'heading' + i">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse' + i" [attr.aria-controls]="'#collapse' + i">
+          <strong>{{ guild.name }}</strong>&nbsp; [{{ guild.membersCount }}/{{ guild.guildMaxMembers }}]
+        </button>
+
+        
+      </h2>
+      <div [attr.id]="'collapse' + i" class="accordion-collapse collapse" [attr.aria-labelledby]="'#heading' + i" data-bs-parent="#accordionExample">
+        
+        <div class="accordion-body">
+          {{ guild.description }}
+          <br />
+          <br />
+          <button>
+                  class="btn btn-primary" (click)="onDetailsClick(guild.id)">Details
+          </button>
         </div>
+      </div>
     </div>
 </div>
