Fix routing to a guild's details page

--- a/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
+++ b/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="guildDetails">
-    <h2>{{ guildDetails.userName }}</h2>
+    <h2>{{ guildDetails.guildName }}</h2>
     <p>{{ guildDetails.description }}</p>
     <p>Members Count: {{ guildDetails.members.length }}</p>
 
