a little changes of styles of the buttons

--- a/openlab-project/ClientApp/src/app/guild/guild.component.html
+++ b/openlab-project/ClientApp/src/app/guild/guild.component.html
@@ -15,10 +15,10 @@
           {{ guild.description }}
           <br />
           <br />
-            <button>
+            <button class="details">
               <a [title]="guild.name + ' dedscription'"
                  [routerLink]="['/guild', guild.id]">
-                {{ guild.name }}
+                Details
               </a>
             </button>
           </div>
