--- a/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
+++ b/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
@@ -11,4 +11,9 @@
     </ul>
 </div>
 
-<button (click)="navigateTo()">Go to App Module</button>
+<button (click)="navigateTo()">
+  <a>
+    Go to App Module
+  </a>
+
+</button>
