--- a/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
+++ b/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
@@ -1,19 +1,15 @@
 <div *ngIf="guildDetails">
-    <h2>{{ guildDetails.guildName }}</h2>
-    <p>{{ guildDetails.description }}</p>
-    <p>Members Count: {{ guildDetails.members.length }}</p>
+  <h2>{{ guildDetails.guildName }}</h2>
+  <p>{{ guildDetails.description }}</p>
+  <p>Members Count: {{ guildDetails.members.length }}</p>
 
-    <h3>Members:</h3>
-    <ul>
-        <li *ngFor="let member of guildDetails.members">
-            {{ member.userName }} (ID: {{ member.userId }})
-        </li>
-    </ul>
+  <h3>Members:</h3>
+  <ul>
+    <li *ngFor="let member of guildDetails.members">
+      {{ member.userName }} (ID: {{ member.userId }})
+    </li>
+  </ul>
 </div>
 
-<button (click)="navigateTo()">
-  <a>
-    Go to App Module
-  </a>
-
-</button>
+<button (click)="joinGuild()" >Join Guild</button>
+<button (click)="leaveGuild()" >Leave Guild</button>
