update angular v16 + little changes at buttons

--- a/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.css
+++ b/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.css
@@ -13,3 +13,10 @@ button {
   button a:hover {
       color:white;
   }
+
+  .join{
+      background-color:chartreuse;
+  }
+  .leave{
+      background-color:red;
+  }
