--- a/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
+++ b/openlab-project/ClientApp/src/app/gulid-details/gulid-details.component.html
@@ -11,5 +11,5 @@
   </ul>
 </div>
 
-<button (click)="joinGuild()" >Join Guild</button>
-<button (click)="leaveGuild()" >Leave Guild</button>
+<button class="join" (click)="joinGuild()" >Join Guild</button>
+<button class="leave" (click)="leaveGuild()" >Leave Guild</button>
